--- a/index.html
+++ b/index.html
@@ -10,9 +10,25 @@
 <body>
 
 
-<header>
+<header class="header">
     <img src="banner.png" alt=""  class="imgg">
 </header>
+
+<nav class="navi">	
+	<ul>
+		<li><a href="#">Home</a></li>
+		<li><a href="#">Servicios</a></li>
+		<li><a href="#">Blog</a></li>
+		<li><a href="#">Contacto</a></li>
+	</ul>
+</nav>
+
+
+
+
+
+
+
 
 <nav class="navbar">
 <a href="">Inicio</a>
@@ -30,7 +46,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
 </section>
 
-<section>
+<section class="localizacion">
     <h2 class="titulo">localización</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
 
@@ -51,14 +67,14 @@
     
 </section>
 
-<section>
+<section class="tratamientos">
     <h2 class="titulo">tratamientos</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum atque id, et laboriosam adipisci delectus modi quas, cupiditate provident rerum sit facilis nesciunt tenetur! Aut perspiciatis alias repellendus officia.</p>
-    <video src=""></video>
+    <iframe width="80%" height="315" src="https://www.youtube.com/embed/uDpqhEy1Dyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </section>
 
-<section>
+<section class="tarifas">
     <article>
         <h2 class="titulo">tarifas</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex accusantium nam expedita, sit consectetur soluta minima aliquid odit doloribus facere neque voluptatum tempora aliquam repellendus vitae dolorem? Quos, eius incidunt?</p>
@@ -66,12 +82,12 @@
     </article>
 </section>
 
-<footer>
+<footer class="footer">
     <h2 class="titulo">contactenos</h2>
     <form action="">
-        <p>nombre</p><br>
-        <input type="text"><br>
-        <p>email</p><br>
+        <p>nombre</p>
+        <input type="text">
+        <p>email</p>
         <input type="email"><br>
         <textarea name="" id="" cols="30" rows="10"></textarea><br>
         <input type="submit">
